# SparkNG

./: README.ja.md
cpp/: CMakeLists.txt  README_cpp.md
cpp/include/: lf_model.h
cpp/src/: closeI2k0xi0.cpp  closeI2kn0.cpp  closeI4.cpp  hello.cpp  openI5.cpp
cpp/test/: main.cpp
